--- a/libs/libuv/Makefile
+++ b/libs/libuv/Makefile
@@ -16,7 +16,7 @@ PKG_SOURCE_URL:=http://dist.libuv.org/dist/v$(PKG_VERSION)/
 PKG_HASH:=65db0c7f2438bc8cd48865de282bf6670027f3557d6e3cb62fb65b2e350a687d
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-v$(PKG_VERSION)
 
-PKG_MAINTAINER:=Marko Ratkaj <marko.ratkaj@sartura.hr>
+PKG_MAINTAINER:=Damir Samardzic <damir.samardzic@sartura.hr>
 PKG_LICENSE:=MIT
 PKG_LICENSE_FILES:=LICENSE
 PKG_CPE_ID:=cpe:/a:libuv_project:libuv
