--- a/libs/zlog/Makefile
+++ b/libs/zlog/Makefile
@@ -4,8 +4,8 @@ PKG_NAME:=zlog
 PKG_VERSION:=1.2.15
 PKG_RELEASE:=$(AUTORELEASE)
 
-PKG_SOURCE:=$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://github.com/HardySimpson/$(PKG_NAME)/archive/refs/tags/
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=https://github.com/HardySimpson/$(PKG_NAME)/archive/refs/tags/$(PKG_VERSION).tar.gz?
 PKG_HASH:=00037ab8d52772a95d645f1dcfd2c292b7cea326b54e63e219a5b7fdcb7e6508
 PKG_MAINTAINER:=Marko Ratkaj <markoratkaj@gmail.com>
 
