dockerd: fix dependencies missing
Signed-off-by: Liang Yang <ggg17226@gmail.com>

--- a/utils/dockerd/Makefile
+++ b/utils/dockerd/Makefile
@@ -35,7 +35,7 @@ define Package/dockerd
   URL:=https://www.docker.com/
   DEPENDS:=$(GO_ARCH_DEPENDS) +btrfs-progs +ca-certificates +containerd +libdevmapper +libnetwork +tini \
            +KERNEL_SECCOMP:libseccomp +iptables-mod-extra +kmod-br-netfilter +kmod-ikconfig +kmod-nf-conntrack-netlink +kmod-nf-ipvs \
-           +kmod-nf-nat +kmod-veth
+           +kmod-nf-nat +kmod-veth +iptables-legacy +iptables-mod-nat-extra
   USERID:=docker:docker
   MENU:=1
 endef
