dockerd: Sorted dependencies for better diffs
Signed-off-by: Gerard Ryan <G.M0N3Y.2503@gmail.com>

--- a/utils/dockerd/Makefile
+++ b/utils/dockerd/Makefile
@@ -33,9 +33,23 @@ define Package/dockerd
   CATEGORY:=Utilities
   TITLE:=Docker Community Edition Daemon
   URL:=https://www.docker.com/
-  DEPENDS:=$(GO_ARCH_DEPENDS) +btrfs-progs +ca-certificates +containerd +libdevmapper +libnetwork +tini \
-           +KERNEL_SECCOMP:libseccomp +iptables-mod-extra +kmod-br-netfilter +kmod-ikconfig +kmod-nf-conntrack-netlink +kmod-nf-ipvs \
-           +kmod-nf-nat +kmod-veth +iptables-legacy +iptables-mod-nat-extra
+  DEPENDS:=$(GO_ARCH_DEPENDS) \
+    +btrfs-progs \
+    +ca-certificates \
+    +containerd \
+    +iptables-legacy \
+    +iptables-mod-extra \
+    +iptables-mod-nat-extra \
+    +KERNEL_SECCOMP:libseccomp \
+    +kmod-br-netfilter \
+    +kmod-ikconfig \
+    +kmod-nf-conntrack-netlink \
+    +kmod-nf-ipvs \
+    +kmod-nf-nat \
+    +kmod-veth \
+    +libdevmapper \
+    +libnetwork \
+    +tini
   USERID:=docker:docker
   MENU:=1
 endef
