audit: avoid interferece with base libaudit build
Both audit in the packages feed and libaudito from the base repo use the
same sources.

Have 'audit' use a different build directory than 'libaudit' package to
avoid interference between them.

Signed-off-by: Eneas U de Queiroz <cotequeiroz@gmail.com>
(cherry picked from commit c0f26f4980cfb6d2abb1b1548530cee41c5f92aa)

--- a/utils/audit/Makefile
+++ b/utils/audit/Makefile
@@ -19,6 +19,7 @@ PKG_LICENSE_FILES:=COPYING
 PKG_CPE_ID:=cpe:/a:linux_audit_project:linux_audit
 
 PKG_FIXUP:=autoreconf
+PKG_BUILD_DIR=$(BUILD_DIR)/$(PKG_NAME)-packages/$(PKG_NAME)-$(PKG_VERSION)
 
 PKG_USE_MIPS16:=0
 
