--- a/admin/rsyslog/Makefile
+++ b/admin/rsyslog/Makefile
@@ -72,6 +72,8 @@ define Package/rsyslog/install
 	$(INSTALL_CONF) ./files/rsyslog.conf $(1)/etc
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/rsyslog.init $(1)/etc/init.d/rsyslog
+	$(INSTALL_DIR) $(1)/etc/config
+	$(INSTALL_CONF) ./files/rsyslog $(1)/etc/config
 endef
 
 define Package/rsyslog/config
