gnutls: disable brotli
Disable the brotli library by default. It is not used and may prevent
linking issues in the future.

Signed-off-by: Nick Hainke <vincent@systemli.org>

--- a/libs/gnutls/Makefile
+++ b/libs/gnutls/Makefile
@@ -135,6 +135,7 @@ CONFIGURE_ARGS+= \
 	--with-librt-prefix="$(LIBRT_ROOT_DIR)/" \
 	--with-pic \
 	--with-system-priority-file="" \
+	--without-brotli \
 	--without-zlib \
 	--without-zstd
 
