--- a/utils/wifitoggle/files/wifitoggle.config
+++ b/utils/wifitoggle/files/wifitoggle.config
@@ -1,8 +1,8 @@
 config wifitoggle
-	option button	'wps'
+	option button	'wlan'
 
 	option persistent	'0' 
-	option timer		'600'
+	option timer		'0'
 
 	#option led_sysfs		'wrt160nl:amber:wps'
 	# Leaving this option empty, makes sure that no LED is touched
