acme.sh Support for --reloadcmd
Signed-off-by: Sergey Ponomarev <stokito@gmail.com>

--- a/net/acme/files/acme.config
+++ b/net/acme/files/acme.config
@@ -28,6 +28,7 @@ config cert 'example'
 	option update_uhttpd 1
 	option update_nginx 1
 	option update_haproxy 0
+	# option reloadcmd ""
 	list domains example.org
 	list domains sub.example.org
 	option webroot ""
